# rust-i18n

./: Cargo.toml  README.md
benches/: bench.rs
crates/extract/: Cargo.toml
crates/extract/src/: example.test.rs  extractor.rs  generator.rs  lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/support/: Cargo.toml
crates/support/src/: backend.rs  config.rs  lib.rs
examples/app-load-path/: Cargo.toml
examples/app-workspace/app1/: Cargo.toml
examples/app-workspace/crates/example-base/: Cargo.toml
examples/foo/: Cargo.toml
examples/share-locales-in-workspace/my-app1/: Cargo.toml
examples/share-locales-in-workspace/my-app2/: Cargo.toml
examples/share-locales-in-workspace/my-i18n/: Cargo.toml
src/: config.rs  lib.rs  main.rs
tests/: integration_tests.rs
