[package]
description = "Macro for rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-macro"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "2.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = "2.0.18"

indexmap = { version = "2.0", features = ["serde"] }

rust-i18n-support = { path = "../support", version = "2.5.0" }

[lib]
proc-macro = true
