[package]
description = "Support for rust-i18n crate."
edition = "2021"
license = "MIT"
name = "rust-i18n-support"
readme = "../../README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
version = "2.5.0"

[dependencies]
globwalk = "0.8.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dunce = "1.0.4"
indexmap = { version = "2.0", features = ["serde"] }
